--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -60,4 +61,14 @@ footer {
 ul li::marker {
   color: #0077cc;
 }
-  
+
+.imagen-seccion {
+  max-width: 100%;
+  width: 600px;
+  height: auto;
+  display: block;
+  margin: 20px auto;
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 1s ease, transform 1s ease;
+}
